tests/integration/features/source_code_traceability/_source_nodes/_validation/03_merge_by_uid_conflicting_mid/test.itest
#
# This test verifies that if SDoc node and source node have same UID and thus are
# subject to be merged, an error is thrown if both sides set also MID and the MIDs are not equal.
#
# @relation(SDOC-SRS-141, scope=file)
#

RUN: %expect_exit 1 %strictdoc export %S --output-dir %T | filecheck %s --dump-input=fail
CHECK: error: Can't merge node by UID REQ-SOURCE-1: Conflicting MID: 3bd0162d-d6d2-42a1-9324-ab8415190970 != e7c09b63-2bed-4046-9511-a5b17978f152
